2005-05-18  Anthony Green  <green@redhat.com>

	* jni/gtk-peer/gtk_jawt.c (classpath_jawt_object_lock,
	classpath_jawt_object_unlock, classpath_jawt_create_lock,
	classpath_jawt_destroy_lock): New functions.
	* jni/classpath/classpath_jawt.h (classpath_jawt_object_lock,
	classpath_jawt_object_unlock, classpath_jawt_create_lock,
	classpath_jawt_destroy_lock): New functions.
	* include/jawt.h (struct _JAWT_DrawingSurface): Add lock
	field.
	* jawt.c: #include malloc.h.
	(_Jv_Lock): Use lock.
	(_Jv_Unlock): Ditto.
	(_Jv_GetDrawingSurface): Initialize lock.
	(_Jv_FreeDrawingSurface): Destroy lock.
	(_Jv_FreeDrawingSurfaceInfo): Free platformInfo.

2005-05-17  David Daney  <ddaney@avtrex.com>

	PR libgcj/18220
	* testsuite/libjava.lang/Process_3.java (run):  Exit on error.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21140:
	* java/nio/charset/Charset.java (encode, decode): Don't cache.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/http/Headers.java (parse): Include final
	character of line.

2005-05-16  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21606:
	* java/net/URI.java (unquote): Handle lower-case letters as well.

2005-05-16  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	PR libgcj/20504
	gnu/regexp/RE.java: Add support for quoting constructs.

2005-05-15  Tom Tromey  <tromey@redhat.com>

	PR java/21519:
	* testsuite/libjava.compile/pr21519.java: New file.
	* testsuite/libjava.compile/pr21519.no-link: New file.

2005-05-13  Bryce McKinlay  <mckinlay@redhat.com>

	PR libgcj/21557
	* java/lang/natObject.cc (_Jv_MonitorEnter): Save and clear thread
	interrupt status flag if _Jv_CondWait is interrupted.

2005-05-13  Bryce McKinlay  <mckinlay@redhat.com>

	* include/jvm.h (gcj::verifyClasses): Declare.
	* link.cc (gcj::verbose_class_flag): Moved.
	* prims.cc (gcj::verifyClasses): Define here.
	(gcj::verbose_class_flag): Move definition here.
	(_Jv_Linker::wait_for_state): Don't call verify_class
	if gcj::verifyClasses is not set.